screenshots: Fix centering on narrow displays

--- a/src/components/Screenshots.module.css
+++ b/src/components/Screenshots.module.css
@@ -5,6 +5,9 @@
 }
   
 .screenshot {
+  /* Fix centering on narrow displays */
+  min-width: 300px;
+
   /* From Figma specs */
   filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.15));
   border-radius: 15px;
